# buildli

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: grpc_client.py  grpc_client.rs
proto/: buildli.proto
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/embeddings/: mod.rs
src/indexer/: factory.rs  mod.rs  parser.rs  walker.rs
src/query/: factory.rs  mod.rs
src/server/: grpc.rs  mod.rs
src/utils/: mod.rs
src/vector/: local_store.rs  mod.rs
